hphp/test/slow/compilation/1263.php.expectf
Fatal error: Only variables can be used as references in %s/compilation/1263.php on line 9
